[workspace]
members = ["packages/app", "packages/tauri-plugin-registry"]
resolver = "2"

[workspace.package]
authors = ["DeMineArchiver"]
license = "MIT"
homepage = "https://animate-addons.github.io/installer"
repository = "https://github.com/animate-addons/installer"
edition = "2021"

[workspace.dependencies]
tauri = "1"
tauri-build = "1"
serde = "1"
serde_json = "1"
winreg = "0.50"
